syntax = "proto3";
import "Protos/shared_messages.proto";
option csharp_namespace = "Client.ChatApp.Protos.ChatMessages";
package ChatMessageCommandsPkg;

service ChatMessageCommandRPCs{
	rpc Send(ChatMessageMsg) returns(Shared.ResultMsg);
}

message ChatMessageMsg{
	string Id = 1;
	string ChatItemId = 2;
	string SenderId = 3;
	string ReceiverId = 4;
	string Content = 5;
	string FileUrl = 6;
}