syntax = "proto3";
import "Protos/shared_messages.proto";
option csharp_namespace = "Server.ChatApp.Protos";
package chat_message_pkg;


service ChatMessageRPCs {
  rpc Send(MessageReq) returns(Shared.ResultMsg) ;
}


message MessageReq{
	string MessageId = 1;
	string ChatId =2;
	string SenderId = 3;
	string Content = 4;
}